--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>NMCM Games</title>
   <link rel = "stylesheet" href="style.css">
-  <link rel = "icon" href = "gfx/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="gfx/favicon.png">
+
 </head>
 <body>
  
