--- a/games.html
+++ b/games.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<`>
+<head>
   <title>NMCM Homepage</title>
   <link rel = "stylesheet" href="style.css">
   <link rel = "icon" href = "gfx/favicon.png">
-
 </head>
 <body>
  
+
+
   <div class="wrapper">
 
   	<div class="topbar">
@@ -19,44 +20,30 @@
 
 	  	</div>
 	  	<div class="topbar-navbar">
-	  		<a href="index.html" id="nav-button-pressed">
+	  		<a href="#" id="nav-button-pressed">
 	  		NEWS
 	  		</a>
-	  		<a href="games.html" id="nav-button" style="margin-left: 150px">
+	  		<a href="#" id="nav-button" style="margin-left: 150px">
 	  		GAMES
 	  		</a>
-	  		<a href="goldsrc.html" id="nav-button" style="margin-left: 300px">
+	  		<a href="#" id="nav-button" style="margin-left: 300px">
 	  		GOLD SOURCE
 	  		</a>
-	  		<a href="vids.html" id="nav-button" style="margin-left: 450px">
+	  		<a href="#" id="nav-button" style="margin-left: 450px">
 	  		VIDEOS
 	  		</a>
-	  		<a href="misc.html" id="nav-button" style="margin-left: 600px">
+	  		<a href="#" id="nav-button" style="margin-left: 600px">
 	  		MISC
 	  		</a>
 	  		<a href="#bottombar" id="nav-button" style="margin-left: 750px">
 	  		ABOUT
 	  		</a>
-	  	</div>		
-	  	<div id="navbar-infobox">
+	  	</div
+>		<div id="navbar-infobox">
 			Newest updates from NMCM | Frutiger Metro ain't dead here
 		</div>
+
   	</div>
-
-	<div id="marquee-cont">
-	  <table width="100%" border="0" cellspacing="0" cellpadding="0">
-	    <tr>
-	      <td width="50px" style="background:#1174A8;">
-	        <button id="ticker-title">Newest Stuff:</button>
-	      </td>
-	      <td id="marquee">
-		        <marquee id = "scroll-cross">
-		        </marquee>
-	      </td>
-	    </tr>
-	  </table>
-	</div>
-
 
   	<div class="top-promo">
 		<div class="content-slider">
@@ -102,7 +89,6 @@
 			</ul>
 
 			<ul>
-
 			  <li id="nav-list" style="background:none;" href="#">Rival Ravage Mod Repository</li>
 			  <a href="#" class="nav-listhref" ><li id="nav-list" href="#">Map addons</li></a>
 			  <a href="#" class="nav-listhref" ><li id="nav-list" href="#">Weapon reskins</li></a>
@@ -160,6 +146,7 @@
       		Advertisement
       		<img src="gfx/fakeads/ad2-horizontal.png"/ id="article-ad-image">
 
+
       		<div class="article-clump-cascade">
       			<img src="gfx/infoico.png" style="width: 5%;">
       			Example Update
@@ -182,7 +169,7 @@
       		</div>
 
       		      		Advertisement
-      		<img src="gfx/fakeads/ad5-horizontal.gif"/ id="article-ad-image">
+      		<img src="gfx/fakeads/ad5-horizontal.png"/ id="article-ad-image">
       		<div class="article-clump-cascade">
       			<img src="gfx/infoico.png" style="width: 5%;">
       			Liminal Scope Update<br><p style="font-size: 11px;padding-left: 1%;">Game Update - 09/05/24</p>
@@ -215,7 +202,6 @@
 
 
       	<div class="center-ads">
-
       	<ul>
       		<li id="nav-list" style="margin-left:-38%; background:linear-gradient(90deg,#1b9db0,#7ce0e6, #7ce0e6,white); ">Advertisements</li>
       	</ul>
@@ -230,9 +216,6 @@
       	</div>
 
     </div>
-
-
-
 
     <div class="bottombar">
 
@@ -261,6 +244,6 @@
     </div>
   </div>
 
-    <script src = "script.js"></script> 
+
 </body>
 </html>
