--- a/cats/games.html
+++ b/cats/games.html
@@ -23,8 +23,8 @@
 	  		<a href="/cats/games.html" id="nav-button-pressed" style="margin-left: 150px">
 	  		GAMES
 	  		</a>
-	  		<a href="/cats/goldsrc.html" id="nav-button" style="margin-left: 300px">
-	  		GOLD SOURCE
+	  		<a href="/cats/modding.html" id="nav-button" style="margin-left: 300px">
+	  		MODDING
 	  		</a>
 	  		<a href="/cats/vids.html" id="nav-button" style="margin-left: 450px">
 	  		VIDEOS
