--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	  		<a href="/cats/games.html" id="nav-button" style="margin-left: 150px">
 	  		GAMES
 	  		</a>
-	  		<a href="/cats/goldsrc.html" id="nav-button" style="margin-left: 300px">
-	  		GOLD SOURCE
+	  		<a href="/cats/modding.html" id="nav-button" style="margin-left: 300px">
+	  		MODDING
 	  		</a>
 	  		<a href="/cats/vids.html" id="nav-button" style="margin-left: 450px">
 	  		VIDEOS
@@ -109,55 +109,82 @@
       <div class="article-clump-cascade-condensed"
       	style="float:left;" 
       >
-      			<img src="/gfx/infoico.png" style="width: 10%;background:linear-gradient(#1e858a,#90c2c5,#4cb2b7);">
-      			Rival Ravage Announcement!<br><p style="font-size: 11px;padding-left: 1%;">Game Release - TBA</p>
+      			<img src="/gfx/infoico.png" style="width: 10%;">
+      			de_downbad Released!<br><p style="font-size: 11px;padding-left: 1%;">Source mod release</p>
       			<a href="#" id="article-clump-cascade-inheader-download" style="font-size: 27px;">
       				<img id = "article-clump-cascade-inheader-download-img" src="/gfx/infoico.png">
       			See Article</a>
       			<div id = "article-clump-cascade">
 				<!--Text-->
 				<p>
-					After 9 months in development, I'm finally ready to announce the next game in the NMCM game lineup.
+					After 120 hours of development, my first ever Counter-Strike map has been finished. A balanced competitive bomb defusal map set in a run-down ghetto strip club, available now.
 					<br><br>
       			</div>
       	</div>
 
 
       <div class="article-clump-cascade-condensed"
-      	style="float:left; margin-left: 9px;" 
+      	style="float:right; margin-right: 5px;" 
       >
-      			<img src="/gfx/infoico.png" style="width: 5%;background:linear-gradient(#1e858a,#90c2c5,#4cb2b7);">
-      			Rival Ravage Announcement!<br><p style="font-size: 11px;padding-left: 1%;">Game Release - TBA</p>
+      			<img src="/gfx/infoico.png" style="width: 10%;">
+      			The Liminal Scope 0.4 Update<br><p style="font-size: 11px;padding-left: 1%;">Game Update</p>
       			<a href="#" id="article-clump-cascade-inheader-download" style="font-size: 27px;">
       				<img id = "article-clump-cascade-inheader-download-img" src="/gfx/infoico.png">
       			See Article</a>
       			<div id = "article-clump-cascade">
 				<!--Text-->
 				<p>
-					After 9 months in development, I'm finally ready to announce the next game in the NMCM game lineup.
+					The Liminal Scope has undergone a lot of changes during it's 6 months of development.
+					This update brings QOL changes and a range of improvements from previous versions.
 					<br><br>
+					Explore an abandoned subway that branches into side corridors. Stumble through once bustling abandoned corridors with nothing more than distant humming as company. There is a faint sound of metal banging... is anyone there?
+
       			</div>
       	</div>
+
+
 
       <div class="article-clump-cascade-condensed"
-      	style="float:left; margin-top: 10px;" 
+      	style="float:right; margin-right: 5px; margin-top: 20px;" 
       >
-      			<img src="/gfx/infoico.png" style="width: 5%;background:linear-gradient(#1e858a,#90c2c5,#4cb2b7);">
-      			Rival Ravage Announcement!<br><p style="font-size: 11px;padding-left: 1%;">Game Release - TBA</p>
+
+      			<p style="font-size: 14px;">Advertisement</p>
+
+
+      			<div id = "article-clump-cascade">
+				<!--Text-->
+				<p>
+					<img src="/gfx/fakeads/ad1rectangle.gif" style="width: 100%;">
+					<br><br>
+      			</div>
+      	</div>
+
+
+      <div class="article-clump-cascade-condensed"
+      	style="float:right;margin-right: 4px; margin-top: -95px;" 
+      >
+      			<img src="/gfx/infoico.png" style="width: 10%;">
+      			Home Page Facelift!<br><p style="font-size: 11px;padding-left: 1%;">Website Update</p>
       			<a href="#" id="article-clump-cascade-inheader-download" style="font-size: 27px;">
       				<img id = "article-clump-cascade-inheader-download-img" src="/gfx/infoico.png">
       			See Article</a>
       			<div id = "article-clump-cascade">
 				<!--Text-->
 				<p>
-					After 9 months in development, I'm finally ready to announce the next game in the NMCM game lineup.
+					With 2 iterations of the NMCM website spanning 2 years, I've finally settled on this frutiger metro iteration of the website, inspired by the many places of the information super highway of the era gone by.
 					<br><br>
       			</div>
       	</div>
 
+					
+      		<a id="nav-advert">
+      			<img src="gfx/fakeads/ad1hor.gif"/ class="article-ad-image">
+					</a>
+				Advertisement
+      </div>
 
 
-      	</div>
+
 
     <div class="center-ads">
 		<ul>
