--- a/cats/games.html
+++ b/cats/games.html
@@ -11,7 +11,7 @@
   	<div class="topbar">
   	<!--Static-->
 	  	<div class="topbar-logoholder">
-	  		<a href="/index.html" style="cursor: url('/gfx/cursor/cursor-link.png'),auto;">
+	  		<a href="/index.html" style="cursor: url('/gfx/cursor/cursor-link.png'),auto;float: left;">
 	  		<img id = "logo-img"/>
 	  	</a> 
 
