--- a/cats/modding.html
+++ b/cats/modding.html
@@ -11,9 +11,10 @@
   	<div class="topbar">
   	<!--Static-->
 	  	<div class="topbar-logoholder">
-	  		<a href="/index.html" style="cursor: url('/gfx/cursor/cursor-link.png'),auto;">
+	  		<a href="/index.html" style="cursor: url('/gfx/cursor/cursor-link.png'),auto;float: left;">
 	  		<img id = "logo-img"/>
 	  	</a> 
+
 
 	  	</div>
 	  	<div class="topbar-navbar">
