--- a/xsh/infosoosage/infosoosage.html
+++ b/xsh/infosoosage/infosoosage.html
@@ -9,6 +9,12 @@
 
 </head>
 <body>
+
+<object data="/flash/Objects/urqell.swf" width="500" height="300" >
+      <param name="movie" value="/flash/Objects/urqell.swf" autostart="true">
+      <p>Your browser does not support Flash.</p>
+   </object>
+
 <div class="wrapper">
 	<div class="topbar">
 		
@@ -203,7 +209,6 @@
 						<div class="center-article-box-titlebox">
 						<p style="margin-top: -20px;">ON TV - AM</p>
 						
-
 					</div>
 					<br>
 					<div class="center-article-box-contentbox">
@@ -373,7 +378,7 @@
 				</div>
 			</div>
 		</div>
-
+	</div>
 		<s></s>
 	<br>
 	<div class="bottombar">
@@ -400,7 +405,14 @@
 	</div>
 
 </div>
+	<script src="/flash/ruffle.js"></script>
     <script src = "/script.js"></script> 
+    
+<script>
+window.RufflePlayer.config = {
+    autoplay: "auto"
+};
+</script>
 
 </body>
 </html>
