--- a/xsh/infosoosage/infosoosage.html
+++ b/xsh/infosoosage/infosoosage.html
@@ -16,36 +16,11 @@
    </object>
 
 <div class="wrapper">
-	<div class="topbar">
-		
-		<img style="float:left; "src="res/headerimg.png">
-		<div class="search-bar">
-			<img src="res/bgbox.png">
-			<p>Search:</p>
-			<form action="https://www.google.com/search" method="get">
-			  <input class="search-bar-bar" type="text" id="query" name="q" placeholder="Input your search here!" required>
-			  <input class = "search-bar-confirm"type="submit" value="Scour the Web!">
-			</form>
-			<desc2>><u>Tip:</u> Check your spelling? Good spelling means better searches.<br>><u>Tip:</u>The more specific, the better.</desc2>
 
-			<img class="poweredby-img"src="res/icons/poweredby.png">
-		</div>
+	<div id="TEMPLATE-TOPBAR-BLOCK">
 	</div>
-		<div class="topbar-topmenu">
-			<ul>
-				<li class="navbar-hor-override" id="navbar-horizontal"><a>INFO SOOSAGE NETWORK:</a></li>
-				<li id = "navbar-horizontal"><a href="#home">Cinema</a></li>
-				<li id = "navbar-horizontal"><a href="#news">News</a></li>
-				<li id = "navbar-horizontal"><a href="#contact">Entertainment</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Music</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Photos</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Blogs</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Videogames</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Ringtones</a></li>
-
-			</ul>
-		</div>
-		<br>
+	
+	<br>
 	<div class="center-wrapper">
 
 		<div class="center-row">
@@ -78,8 +53,6 @@
 
 			<div class="center-column">
 				<div class="center-article-box-wrapper">
-					
-
 					<br>
 					<div class="center-article-box-contentbox">
 						<img src="res/content/service2.png" style="width:100%">
@@ -115,7 +88,7 @@
 				</div>
 			</div>
 
-			<div class="center-column" style="width:12%;">
+			<div class="center-column" style="width:13.7%;">
 				<div class="center-article-box-wrapper">
 					<div class="center-article-box-titlebox">
 						<p style="margin-top: -30px;">STOCK MARKET<br>TODAY</p>
@@ -381,32 +354,13 @@
 	</div>
 		<s></s>
 	<br>
-	<div class="bottombar">
-		<div class="btm-info">
-			<div>
-			Websites in the INFO SOOSAGE™ network: 
-			<a href="#"><i>MySoosage</i></a>
-			<a href="#"><i>InterSoosage</i></a>
-			<a href="#"><i>SHOOFLE</i></a>
-			<a href="#"><i>[NEWLY ACQUIRED]ALEPH Arcade</i></a>
-			</div>
-		</div>
-		<div class="btm-options">
-			<ul style="margin-top: -30px;">
-				<li class = "btm-options-ul"><a href="#home">About Us</a></li>
-				<li class = "btm-options-ul"><a href="#home">Terms of Service</a></li>
-				<li class = "btm-options-ul"><a href="#home">Jobs</a></li>
-				<li class = "btm-options-ul"><a href="#home">InfoSoosage™ Adverts!</a></li>
-				<li class = "btm-options-ul"><a href="#home">Help</a></li>
-			</ul>
-			<p style="text-align: right;margin-top: -40px;">Copyright 2005 © InfoSoosage™ Incorporated. All Rights Reserved.</p>
-
-		</div>
+	<div id = "TEMPLATE-IS-FOOTER-BLOCK">
 	</div>
-
 </div>
 	<script src="/flash/ruffle.js"></script>
     <script src = "/script.js"></script> 
+    <script src = "script.js"></script> 
+
     
 <script>
 window.RufflePlayer.config = {
