--- a/xsh/infosoosage/under-construction.html
+++ b/xsh/infosoosage/under-construction.html
@@ -9,73 +9,30 @@
 
 </head>
 <body>
+
+
 <div class="wrapper">
-	<div class="topbar">
-		
-		<img style="float:left; "src="res/headerimg.png">
-		<div class="search-bar">
-			<img src="res/bgbox.png">
-			<p>Search:</p>
-			<form action="https://www.google.com/search" method="get">
-			  <input class="search-bar-bar" type="text" id="query" name="q" placeholder="Input your search here!" required>
-			  <input class = "search-bar-confirm"type="submit" value="Scour the Web!">
-			</form>
-			<desc2>><u>Tip:</u> Check your spelling? Good spelling means better searches.<br>><u>Tip:</u>The more specific, the better.</desc2>
 
-			<img class="poweredby-img"src="res/icons/poweredby.png">
-		</div>
-
+	<div id="TEMPLATE-TOPBAR-BLOCK">
 	</div>
-		<div class="topbar-topmenu">
-			<ul>
-				<li class="navbar-hor-override" id="navbar-horizontal"><a>INFO SOOSAGE NETWORK:</a></li>
-				<li id = "navbar-horizontal"><a href="#home">Cinema</a></li>
-				<li id = "navbar-horizontal"><a href="#news">News</a></li>
-				<li id = "navbar-horizontal"><a href="#contact">Entertainment</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Music</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Photos</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Blogs</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Videogames</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Ringtones</a></li>
-				<li id = "navbar-horizontal"><a href="#about">Repository</a></li>
-			</ul>
-		</div>
-	<div class="center-wrapper">
-		<div style="text-align: center; font-size: 76px;">
-			WHOOPS!
-		<div style="font-size: 28px">Looks like you're trying to navigate to a page that is either culled or is still under construction. Don't worry about it though, our talented Soosage army is hard at work on making this site!</div>
-		</div>
+	
 
-			<img src="res/under-construction.png" style="padding-left: 17%;">
-			
+	<div style="text-align: center;color:white;">
+		<p style="font-size: 68px;"> WHOOPS! ERROR 404</p>
+		<p style="font-size:36px; color:black;">Looks like you're trying to reach a page that is culled or under construction.</p>
+		<img src="res/under-construction.png">
 	</div>
-
+		<s></s>
 	<br>
-	<div class="bottombar">
-		<div class="btm-info">
-			<div>
-			Websites in the INFO SOOSAGE™ network: 
-			<a href="#"><i>MySoosage</i></a>
-			<a href="#"><i>InterSoosage</i></a>
-			<a href="#"><i>SHOOFLE</i></a>
-			<a href="#"><i>[NEWLY ACQUIRED]ALEPH Arcade</i></a>
-			</div>
-		</div>
-		<div class="btm-options">
-			<ul style="margin-top: -30px;">
-				<li class = "btm-options-ul"><a href="#home">About Us</a></li>
-				<li class = "btm-options-ul"><a href="#home">Terms of Service</a></li>
-				<li class = "btm-options-ul"><a href="#home">Jobs</a></li>
-				<li class = "btm-options-ul"><a href="#home">InfoSoosage™ Adverts!</a></li>
-				<li class = "btm-options-ul"><a href="#home">Help</a></li>
-			</ul>
-			<p style="text-align: right;margin-top: -40px;">Copyright 2005 © InfoSoosage™ Incorporated. All Rights Reserved.</p>
-
-		</div>
+	<div id = "TEMPLATE-IS-FOOTER-BLOCK">
 	</div>
-
 </div>
+
     <script src = "/script.js"></script> 
+    <script src = "script.js"></script> 
+
+
+
 
 </body>
 </html>
