--- a/xsh/infosoosage/under-construction.html
+++ b/xsh/infosoosage/under-construction.html
@@ -18,7 +18,7 @@
 	
 
 	<div style="text-align: center;color:white;">
-		<p style="font-size: 68px;"> WHOOPS! ERROR 404</p>
+		<p style="font-size: 68px;color: black;"> WHOOPS! ERROR 404</p>
 		<p style="font-size:36px; color:black;">Looks like you're trying to reach a page that is culled or under construction.</p>
 		<img src="res/under-construction.png">
 	</div>
