--- a/xsh/infosoosage/infosoosage.html
+++ b/xsh/infosoosage/infosoosage.html
@@ -11,6 +11,8 @@
 <body>
 
 
+
+
 <div class="wrapper">
 
 	<div id="TEMPLATE-TOPBAR-BLOCK">
@@ -158,7 +160,7 @@
 					<br>
 					<div class="center-article-box-contentbox">
 						<img src="res/content/service2.png"style="width: 150px;">
-						<p style="float:right;padding-right: 90px;"><b>HEADLINE!</b>
+						<p style="float:right;padding-right: 50px;"><b>HEADLINE!</b><br>kads;adslkdsa;lkds kl
 
 						</p>
 
@@ -218,15 +220,37 @@
 					<br>
 					<div class="center-article-box-contentbox">
 						<div class="center-article-box-titlebox">
-						<p style="margin-top: -20px;">FEATURED NEWS STORY</p>
-						<img src="res/icons/news.png" style="float: left;width:50px;margin-top:-55px;padding-left: 70%;">
+						<p style="margin-top: -20px;">FEATURED ENTERTAINMENT</p>
+						<img src="res/icons/sidewynder.png" style="float: left;width:50px;margin-top:-55px;padding-left: 70%;">
+						<img src="res/icons/music.png" style="float: left;width:50px;margin-top:-55px;padding-left: 85%;">
 					</div>
 					<br>
 					<div class="center-article-box-contentbox">
-						<img src="res/content/service2.png"style="width: 150px;">
-						<p style="float:right;padding-right: 90px;"><b>HEADLINE!</b>
+							<div class="tab">
+							  <button class="tablinks active" onclick="openCity(event, 'opt1')">GAMES</button>
+							  <button class="tablinks" onclick="openCity(event, 'opt2')">VIDEOS</button>
+							  <button class="tablinks" onclick="openCity(event, 'opt3')">MUSIC</button>
+							</div>
 
-						</p>
+							<!-- Tab content -->
+							<div id="opt1" class="tabcontent" style="display: block;">
+							  	<h3>A game</h3>
+								  <object data="/flash/Objects/Arcade/pacman-flash.swf" width="375" height="240" >
+								      <param name="movie" value="/flash/Objects/urqell.swf" autostart="true">
+								      <p>Your browser does not support Flash.</p>
+								   </object>
+
+							</div>
+
+							<div id="opt2" class="tabcontent">
+							  <h3>Paris</h3>
+							  <p>Paris is the capital of France.</p>
+							</div>
+
+							<div id="opt3" class="tabcontent">
+							  <h3>Tokyo</h3>
+							  <p>Tokyo is the capital of Japan.</p>
+							</div>
 
 					</div>
 					</div>
@@ -275,7 +299,7 @@
 					<br>
 					<div class="center-article-box-contentbox">
 						<img src="res/content/service2.png"style="width: 150px;">
-						<p style="float:right;padding-right: 90px;"><b>HEADLINE!</b>
+						<p style="float:right;padding-right: 80px;"><b>HEADLINE!</b><br>oikjdasjdsajsadlk
 
 						</p>
 
