--- a/xsh/infosoosage/infosoosage.html
+++ b/xsh/infosoosage/infosoosage.html
@@ -234,22 +234,42 @@
 
 							<!-- Tab content -->
 							<div id="opt1" class="tabcontent" style="display: block;">
-							  	<h3>A game</h3>
+								<hr>
+							  	<h3 style="margin-left: -25px;">
+							  		<ul style="list-style: '→';">
+							  			<li><a href="#">PC-Man</a></li>
+							  			<li><a href="#">Save the Couch!</a></li>
+							  		</ul>
+							  		<ul style="float:center;margin-top: -52.5px;margin-left: 145px;list-style: '→';">
+							  			<li><a href="#">Lunar Lander</a></li>
+							  			<li><a href="#">Billiards</a></li>
+							  		</ul>
+							  		<ul style="float:center;margin-top: -52.5px;margin-left: 270px;list-style: '→';">
+							  			<li><a href="#">NASCAR</a></li>
+							  			<li><a href="#">Urqell</a></li>
+							  		</ul>
+							  	</h3>
+								  <!--
 								  <object data="/flash/Objects/Arcade/pacman-flash.swf" width="375" height="240" >
 								      <param name="movie" value="/flash/Objects/urqell.swf" autostart="true">
 								      <p>Your browser does not support Flash.</p>
 								   </object>
-
+								   -->
+								   <div style="float:left;margin-top: -160px;">
+								   		<img src="res/icons/featured-game.png" style="width: 64px;">
+										<p style="margin-top: -90px;"><b>Our top picks:</b></p>
+										<a style="margin-top: 50px;margin-left: 90px;font-size: 36px;" href="#"><b>2D SOLITAIRE</b></a>
+								   </div>
 							</div>
 
 							<div id="opt2" class="tabcontent">
 							  <h3>Paris</h3>
-							  <p>Paris is the capital of France.</p>
+
 							</div>
 
 							<div id="opt3" class="tabcontent">
 							  <h3>Tokyo</h3>
-							  <p>Tokyo is the capital of Japan.</p>
+
 							</div>
 
 					</div>
