--- a/xsh/infosoosage/infosoosage.html
+++ b/xsh/infosoosage/infosoosage.html
@@ -251,9 +251,14 @@
 							</div>
 
 							<!-- Tab content -->
-							<div id="opt1" class="tabcontent" style="display: block;">
+							<div id="opt1" class="tabcontent" style="display: block;padding-top: 0px;">
+								<p style=""><b>Our top picks:</b></p>
 
-							  	<h3 style="margin-left: -25px;margin-top: -16px;">
+								<a style="margin-left: 90px;font-size: 36px;" href="#"><b>2D SOLITAIRE</b></a>
+								<img src="res/icons/featured-game.png" style="width: 64px; margin-top: -70px;">
+								<hr>
+							  	<h3 style="margin-left: -25px;
+							  	">
 							  		<ul style="list-style: '→';">
 							  			<li><a href="#">PC-Man</a></li>
 							  			<li><a href="#">Save the Couch!</a></li>
@@ -267,18 +272,13 @@
 							  			<li><a href="#">Urqell</a></li>
 							  		</ul>
 							  	</h3>
+							  	<hr>
 								  <!--
 								  <object data="/flash/Objects/Arcade/pacman-flash.swf" width="375" height="240" >
 								      <param name="movie" value="/flash/Objects/urqell.swf" autostart="true">
 								      <p>Your browser does not support Flash.</p>
 								   </object>
 								   -->
-								   <div style="float:left;margin-top: -130px;">
-								   		<img src="res/icons/featured-game.png" style="width: 64px;">
-										<p style="margin-top: -90px;"><b>Our top picks:</b></p>
-										<a style="margin-top: 50px;margin-left: 90px;font-size: 36px;" href="#"><b>2D SOLITAIRE</b></a>
-										<hr style="margin-top:20px;">
-								   </div>
 							</div>
 
 							<div id="opt2" class="tabcontent" style="padding-top: 10px;padding-bottom: 40px;">
