--- a/xsh/infosoosage/infosoosage.html
+++ b/xsh/infosoosage/infosoosage.html
@@ -252,17 +252,31 @@
 
 							<!-- Tab content -->
 							<div id="opt1" class="tabcontent" style="display: block;padding-top: 0px;">
-								<p style=""><b>Our top picks:</b></p>
-
-								<a style="margin-left: 90px;font-size: 36px;" href="#"><b>2D SOLITAIRE</b></a>
-								<img src="res/icons/featured-game.png" style="width: 64px; margin-top: -70px;">
 								<hr>
-							  	<h3 style="margin-left: -25px;
-							  	">
+
+								<div style="float:left;">
+									<p style=""><b>Our top picks:</b></p>
+									<img src="res/icons/featured-game.png" style="width: 42px;margin-top: -15px;">
+									<a style="font-size: 20px;" href="#"><b>2D SOLITAIRE</b></a>
+									<br>
+									<img src="res/icons/featured-game-2.png" style="width: 42px;">
+									<a style="font-size: 20px;" href="#"><b>GOLF MASTER</b></a>
+									
+								</div>
+
+							  	<h3 style="padding-left: 200px;">
 							  		<ul style="list-style: '→';">
 							  			<li><a href="#">PC-Man</a></li>
-							  			<li><a href="#">Save the Couch!</a></li>
+							  			<li><a href="#">Save the Couch!</a>
+							  			<li><a href="#">Lunar Lander</a></li>
+							  			<li><a href="#">Billiards</a>
+							  			<li><a href="#">NASCAR</a></li>
+							  			<li><a href="#">Urquell</a>
+							  			
+
+							  			</li>
 							  		</ul>
+							  		<!--
 							  		<ul style="float:center;margin-top: -52.5px;margin-left: 145px;list-style: '→';">
 							  			<li><a href="#">Lunar Lander</a></li>
 							  			<li><a href="#">Billiards</a></li>
@@ -271,8 +285,12 @@
 							  			<li><a href="#">NASCAR</a></li>
 							  			<li><a href="#">Urqell</a></li>
 							  		</ul>
+							  		-->
 							  	</h3>
 							  	<hr>
+								<hr style="border-color:white;border: 1px white ridge;">
+
+							  	<br>
 								  <!--
 								  <object data="/flash/Objects/Arcade/pacman-flash.swf" width="375" height="240" >
 								      <param name="movie" value="/flash/Objects/urqell.swf" autostart="true">
@@ -281,7 +299,7 @@
 								   -->
 							</div>
 
-							<div id="opt2" class="tabcontent" style="padding-top: 10px;padding-bottom: 40px;">
+							<div id="opt2" class="tabcontent" style="padding-top: 13px;padding-bottom: 40px;">
 							  <img src="res/content/film-png.png" style="max-width: 50%;">
 							  <p style="float:right;font-size: 20px;"><b>Soosage Comes <br>Home</b><br>Release Date: <br><u>1/26/2006</u></p>
 
