--- a/fungames.html
+++ b/fungames.html
@@ -1,1 +1,4 @@
-<audio src="/startup.wav" autoplay></audio>
+<audio controls autoplay>
+  <source src="startup.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
