--- a/cats/games.html
+++ b/cats/games.html
@@ -71,6 +71,33 @@
 
       	<div class="center-articles">
 
+      		<div class="article-clump-cascade">
+      			<img src="/gfx/gameico/rr.png" style="width: 5%;">
+      			Tinky Tim: The Digital Predator<br><p style="font-size: 11px;padding-left: 1%;">Game Release - March 4th, 2025</p>
+      			<div id = "article-clump-cascade">
+				<!--Text-->
+				<p>
+					The world is a gritty and dangerous place. You are the its liberator. Hack, compile evidence and imprison. You are the internet guardian angel now.<br><br>
+					<b>Screenshots:</b>
+					<br><br>
+
+					<div class="img-article-preview" style="">
+							<p id="img-article-header">Tinky Tim: TDP Screenshot 1</p>
+							<a href="/gfx/media/tt_promo_1.jpg">
+							<img src="/gfx/media/tt_promo_1.jpg" class="img-article-img">
+							</a>
+					</div>
+					<br><br>
+					<div class="img-article-preview" style="">
+							<p id="img-article-header">Tinky Tim: TDP Screenshot 2</p>
+							<a href="/gfx/media/tt_promo_0.jpg">
+							<img src="/gfx/media/tt_promo_0.jpg" class="img-article-img">
+							</a>
+					</div>
+
+					<br><br>
+      			</div>
+      		</div>
 
       		<div class="article-clump-cascade">
       			<img src="/gfx/gameico/rr.png" style="width: 5%;">
