--- a/cats/games.html
+++ b/cats/games.html
@@ -83,15 +83,15 @@
 
 					<div class="img-article-preview" style="">
 							<p id="img-article-header">Tinky Tim: TDP Screenshot 1</p>
-							<a href="/gfx/media/tt_promo_1.jpg">
-							<img src="/gfx/media/tt_promo_1.jpg" class="img-article-img">
+							<a href="/gfx/media/tt_promo1.jpg">
+							<img src="/gfx/media/tt_promo1.jpg" class="img-article-img">
 							</a>
 					</div>
 					<br><br>
 					<div class="img-article-preview" style="">
 							<p id="img-article-header">Tinky Tim: TDP Screenshot 2</p>
-							<a href="/gfx/media/tt_promo_0.jpg">
-							<img src="/gfx/media/tt_promo_0.jpg" class="img-article-img">
+							<a href="/gfx/media/tt_promo0.jpg">
+							<img src="/gfx/media/tt_promo0.jpg" class="img-article-img">
 							</a>
 					</div>
 
