--- a/cats/games.html
+++ b/cats/games.html
@@ -72,7 +72,7 @@
       	<div class="center-articles">
 
       		<div class="article-clump-cascade">
-      			<img src="/gfx/gameico/rr.png" style="width: 5%;">
+      			<img src="/gfx/gameico/tt.png" style="width: 5%;">
       			Tinky Tim: The Digital Predator<br><p style="font-size: 11px;padding-left: 1%;">Game Release - March 4th, 2025</p>
       			<div id = "article-clump-cascade">
 				<!--Text-->
