--- a/cats/games.html
+++ b/cats/games.html
@@ -77,7 +77,7 @@
       			<div id = "article-clump-cascade">
 				<!--Text-->
 				<p>
-					The world is a gritty and dangerous place. You are the its liberator. Hack, compile evidence and imprison. You are the internet guardian angel now.<br><br>
+					The world is a gritty and dangerous place. You are the its liberator. Hack, compile evidence and imprison. Make the internet a better place, one creep behind bars at a time.<br><br>
 					<b>Screenshots:</b>
 					<br><br>
 
